Refactor code for clarity and modern Java usage
Replaced raw types with generic Map/List usage, improved variable naming, and reordered methods for better readability. Added @NotNull annotations and reordered event handler methods in LoginListener. Updated UUIDFetcher to use final parameters and URI for URL creation, improving code safety and clarity.